complate Practice Task 2

--- a/PracticeTask2.html
+++ b/PracticeTask2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <main>
-        <h1>There is Practice Task 2</h1>
+        <h1 style="text-align: center;">There is Practice Task 2</h1>
     </main>
 
     <script src="PracticeTask2.js"></script>
